Fixing scrollbar side jump of overlay. And added variables for formspree

--- a/components/sass/partials/_layout.scss
+++ b/components/sass/partials/_layout.scss
@@ -3,7 +3,8 @@
 
 .body--prevent-scrolling {
   position: absolute;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: hidden;
   -webkit-overflow-scrolling: touch;
   z-index: 1;
 }
